--- a/compiler/lib-cmdline/dune
+++ b/compiler/lib-cmdline/dune
@@ -1,4 +1,3 @@
 (library
-  (name jsoo_cmdline)
-  (libraries cmdliner js_of_ocaml-compiler)
-)
+ (name jsoo_cmdline)
+ (libraries cmdliner js_of_ocaml-compiler))
