--- a/compiler/tests-compiler/dune
+++ b/compiler/tests-compiler/dune
@@ -4,9 +4,9 @@
  (inline_tests
   (flags -allow-output-patterns)
   (deps
-    (file ../../compiler/bin-js_of_ocaml/js_of_ocaml.exe)
-    (file ../../compiler/bin-jsoo_minify/jsoo_minify.exe)
-  ))
- (preprocess (pps ppx_expect)))
+   (file ../../compiler/bin-js_of_ocaml/js_of_ocaml.exe)
+   (file ../../compiler/bin-jsoo_minify/jsoo_minify.exe)))
+ (preprocess
+  (pps ppx_expect)))
 
 (include_subdirs unqualified)
