--- a/ppx/ppx_js/bin/dune
+++ b/ppx/ppx_js/bin/dune
@@ -1,8 +1,9 @@
 (executables
-  (names main)
-  (libraries ppx_js ppxlib))
+ (names main)
+ (libraries ppx_js ppxlib))
 
 (install
-  (section lib)
-  (package js_of_ocaml-ppx)
-  (files (main.exe as ppx_js)))
+ (section lib)
+ (package js_of_ocaml-ppx)
+ (files
+  (main.exe as ppx_js)))
