--- a/toplevel/bin/dune
+++ b/toplevel/bin/dune
@@ -1,11 +1,9 @@
 (executables
-  (names        jsoo_mkcmis jsoo_mktop jsoo_listunits)
-  (public_names jsoo_mkcmis jsoo_mktop jsoo_listunits)
-  (package js_of_ocaml-toplevel)
-  (libraries
-    bytes
-    js_of_ocaml-compiler
-    js_of_ocaml-compiler.findlib-support
-    js_of_ocaml-compiler.runtime
-    )
-  )
+ (names jsoo_mkcmis jsoo_mktop jsoo_listunits)
+ (public_names jsoo_mkcmis jsoo_mktop jsoo_listunits)
+ (package js_of_ocaml-toplevel)
+ (libraries
+  bytes
+  js_of_ocaml-compiler
+  js_of_ocaml-compiler.findlib-support
+  js_of_ocaml-compiler.runtime))
