--- a/compiler/lib-findlib-support/dune
+++ b/compiler/lib-findlib-support/dune
@@ -1,7 +1,6 @@
 (library
-  (name jsoo_findlib_support)
-  (libraries js_of_ocaml-compiler findlib)
-  (optional)
-  (public_name js_of_ocaml-compiler.findlib-support)
-  (library_flags (-linkall))
-  )
+ (name jsoo_findlib_support)
+ (libraries js_of_ocaml-compiler findlib)
+ (optional)
+ (public_name js_of_ocaml-compiler.findlib-support)
+ (library_flags (-linkall)))
