--- a/compiler/tests-jsoo/dune
+++ b/compiler/tests-jsoo/dune
@@ -1,8 +1,11 @@
 (library
  (name jsoo_testsuite)
  (libraries unix)
- (foreign_stubs (language c)(names bigarray_stubs))
+ (foreign_stubs
+  (language c)
+  (names bigarray_stubs))
  (inline_tests
   (flags -allow-output-patterns)
   (modes js native))
- (preprocess (pps ppx_expect)))
+ (preprocess
+  (pps ppx_expect)))
