--- a/compiler/tests-num/dune
+++ b/compiler/tests-num/dune
@@ -1,23 +1,28 @@
 (executable
-  (name main)
-  (libraries num)
-  (modes native js)
-  (flags (:standard -linkall -w -3-7-33-35-37
-                    -safe-string
-                    -no-strict-sequence))
-)
+ (name main)
+ (libraries num)
+ (modes native js)
+ (flags
+  (:standard -linkall -w -3-7-33-35-37 -safe-string -no-strict-sequence)))
 
 (rule
-  (target main.referencejs)
-  (deps main.bc.js)
-  (action (with-stdout-to %{target} (run node ./main.bc.js))))
+ (target main.referencejs)
+ (deps main.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./main.bc.js))))
 
 (rule
-  (target main.reference)
-  (deps main.exe)
-  (action (with-stdout-to %{target} (run ./main.exe))))
+ (target main.reference)
+ (deps main.exe)
+ (action
+  (with-stdout-to
+   %{target}
+   (run ./main.exe))))
 
 (rule
-  (alias runtest)
-  (deps main.reference main.referencejs)
-  (action (diff main.reference main.referencejs)))
+ (alias runtest)
+ (deps main.reference main.referencejs)
+ (action
+  (diff main.reference main.referencejs)))
