--- a/compiler/tests-ocaml/basic-modules/dune
+++ b/compiler/tests-ocaml/basic-modules/dune
@@ -1,15 +1,18 @@
 (executables
-  (names recursive_module_init)
-  (libraries)
-  (modes js)
-)
+ (names recursive_module_init)
+ (libraries)
+ (modes js))
 
 (rule
-  (target recursive_module_init.referencejs)
-  (deps recursive_module_init.bc.js)
-  (action (with-stdout-to %{target} (run node ./recursive_module_init.bc.js))))
+ (target recursive_module_init.referencejs)
+ (deps recursive_module_init.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./recursive_module_init.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps recursive_module_init.reference recursive_module_init.referencejs)
-  (action (diff recursive_module_init.reference recursive_module_init.referencejs)))
+ (alias runtest)
+ (deps recursive_module_init.reference recursive_module_init.referencejs)
+ (action
+  (diff recursive_module_init.reference recursive_module_init.referencejs)))
