--- a/compiler/tests-ocaml/lib-bytes/dune
+++ b/compiler/tests-ocaml/lib-bytes/dune
@@ -1,24 +1,30 @@
 (executables
-  (names test_bytes binary)
-  (libraries)
-  (modes js)
-)
+ (names test_bytes binary)
+ (libraries)
+ (modes js))
 
 (rule
-  (target test_bytes.referencejs)
-  (deps test_bytes.bc.js)
-  (action (with-stdout-to %{target} (run node ./test_bytes.bc.js))))
+ (target test_bytes.referencejs)
+ (deps test_bytes.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./test_bytes.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps test_bytes.reference test_bytes.referencejs)
-  (action (diff test_bytes.reference test_bytes.referencejs)))
+ (alias runtest)
+ (deps test_bytes.reference test_bytes.referencejs)
+ (action
+  (diff test_bytes.reference test_bytes.referencejs)))
 
 (rule
-  (target binary.referencejs)
-  (deps binary.bc.js)
-  (action (with-stdout-to %{target} (run node ./binary.bc.js))))
+ (target binary.referencejs)
+ (deps binary.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./binary.bc.js))))
 
 (alias
-  (name runtest)
-  (deps binary.referencejs))
+ (name runtest)
+ (deps binary.referencejs))
