--- a/compiler/tests-ocaml/lib-digest/dune
+++ b/compiler/tests-ocaml/lib-digest/dune
@@ -1,15 +1,18 @@
 (executables
-  (names md5)
-  (libraries)
-  (modes js)
-)
+ (names md5)
+ (libraries)
+ (modes js))
 
 (rule
-  (target md5.referencejs)
-  (deps md5.bc.js)
-  (action (with-stdout-to %{target} (run node ./md5.bc.js))))
+ (target md5.referencejs)
+ (deps md5.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./md5.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps md5.reference md5.referencejs)
-  (action (diff md5.reference md5.referencejs)))
+ (alias runtest)
+ (deps md5.reference md5.referencejs)
+ (action
+  (diff md5.reference md5.referencejs)))
