--- a/compiler/tests-ocaml/lib-set/dune
+++ b/compiler/tests-ocaml/lib-set/dune
@@ -1,25 +1,32 @@
 (executables
-  (names testmap testset)
-  (libraries)
-  (modes js)
-)
+ (names testmap testset)
+ (libraries)
+ (modes js))
 
 (rule
-  (target testmap.referencejs)
-  (deps testmap.bc.js)
-  (action (with-stdout-to %{target} (run node ./testmap.bc.js))))
+ (target testmap.referencejs)
+ (deps testmap.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./testmap.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps testmap.reference testmap.referencejs)
-  (action (diff testmap.reference testmap.referencejs)))
+ (alias runtest)
+ (deps testmap.reference testmap.referencejs)
+ (action
+  (diff testmap.reference testmap.referencejs)))
 
 (rule
-  (target testset.referencejs)
-  (deps testset.bc.js)
-  (action (with-stdout-to %{target} (run node ./testset.bc.js))))
+ (target testset.referencejs)
+ (deps testset.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./testset.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps testset.reference testset.referencejs)
-  (action (diff testset.reference testset.referencejs)))
+ (alias runtest)
+ (deps testset.reference testset.referencejs)
+ (action
+  (diff testset.reference testset.referencejs)))
