--- a/compiler/tests-ocaml/lib-string/dune
+++ b/compiler/tests-ocaml/lib-string/dune
@@ -1,15 +1,18 @@
 (executables
-  (names test_string)
-  (libraries)
-  (modes js)
-)
+ (names test_string)
+ (libraries)
+ (modes js))
 
 (rule
-  (target test_string.referencejs)
-  (deps test_string.bc.js)
-  (action (with-stdout-to %{target} (run node ./test_string.bc.js))))
+ (target test_string.referencejs)
+ (deps test_string.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./test_string.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps test_string.reference test_string.referencejs)
-  (action (diff test_string.reference test_string.referencejs)))
+ (alias runtest)
+ (deps test_string.reference test_string.referencejs)
+ (action
+  (diff test_string.reference test_string.referencejs)))
