--- a/compiler/tests-ocaml/prim-bigstring/dune
+++ b/compiler/tests-ocaml/prim-bigstring/dune
@@ -1,25 +1,32 @@
 (executables
-  (names bigstring_access string_access)
-  (libraries)
-  (modes js)
-)
+ (names bigstring_access string_access)
+ (libraries)
+ (modes js))
 
 (rule
-  (target bigstring_access.referencejs)
-  (deps bigstring_access.bc.js)
-  (action (with-stdout-to %{target} (run node ./bigstring_access.bc.js))))
+ (target bigstring_access.referencejs)
+ (deps bigstring_access.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./bigstring_access.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps bigstring_access.reference bigstring_access.referencejs)
-  (action (diff bigstring_access.reference bigstring_access.referencejs)))
+ (alias runtest)
+ (deps bigstring_access.reference bigstring_access.referencejs)
+ (action
+  (diff bigstring_access.reference bigstring_access.referencejs)))
 
 (rule
-  (target string_access.referencejs)
-  (deps string_access.bc.js)
-  (action (with-stdout-to %{target} (run node ./string_access.bc.js))))
+ (target string_access.referencejs)
+ (deps string_access.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./string_access.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps string_access.reference string_access.referencejs)
-  (action (diff string_access.reference string_access.referencejs)))
+ (alias runtest)
+ (deps string_access.reference string_access.referencejs)
+ (action
+  (diff string_access.reference string_access.referencejs)))
