--- a/compiler/tests-ocaml/prim-bswap/dune
+++ b/compiler/tests-ocaml/prim-bswap/dune
@@ -1,15 +1,18 @@
 (executables
-  (names bswap)
-  (libraries)
-  (modes js)
-)
+ (names bswap)
+ (libraries)
+ (modes js))
 
 (rule
-  (target bswap.referencejs)
-  (deps bswap.bc.js)
-  (action (with-stdout-to %{target} (run node ./bswap.bc.js))))
+ (target bswap.referencejs)
+ (deps bswap.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./bswap.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps bswap.reference bswap.referencejs)
-  (action (diff bswap.reference bswap.referencejs)))
+ (alias runtest)
+ (deps bswap.reference bswap.referencejs)
+ (action
+  (diff bswap.reference bswap.referencejs)))
