--- a/compiler/tests-ocaml/prim-revapply/dune
+++ b/compiler/tests-ocaml/prim-revapply/dune
@@ -1,25 +1,32 @@
 (executables
-  (names apply revapply)
-  (libraries)
-  (modes js)
-)
+ (names apply revapply)
+ (libraries)
+ (modes js))
 
 (rule
-  (target apply.referencejs)
-  (deps apply.bc.js)
-  (action (with-stdout-to %{target} (run node ./apply.bc.js))))
+ (target apply.referencejs)
+ (deps apply.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./apply.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps apply.reference apply.referencejs)
-  (action (diff apply.reference apply.referencejs)))
+ (alias runtest)
+ (deps apply.reference apply.referencejs)
+ (action
+  (diff apply.reference apply.referencejs)))
 
 (rule
-  (target revapply.referencejs)
-  (deps revapply.bc.js)
-  (action (with-stdout-to %{target} (run node ./revapply.bc.js))))
+ (target revapply.referencejs)
+ (deps revapply.bc.js)
+ (action
+  (with-stdout-to
+   %{target}
+   (run node ./revapply.bc.js))))
 
 (rule
-  (alias runtest)
-  (deps revapply.reference revapply.referencejs)
-  (action (diff revapply.reference revapply.referencejs)))
+ (alias runtest)
+ (deps revapply.reference revapply.referencejs)
+ (action
+  (diff revapply.reference revapply.referencejs)))
