--- a/examples/cubes/dune
+++ b/examples/cubes/dune
@@ -1,15 +1,21 @@
 (executables
-  (names cubes)
-  (libraries js_of_ocaml-lwt)
-  (modes byte)
-  (preprocess (pps js_of_ocaml-ppx)))
+ (names cubes)
+ (libraries js_of_ocaml-lwt)
+ (modes byte)
+ (preprocess
+  (pps js_of_ocaml-ppx)))
 
 (rule
-  (targets cubes.js)
-  (action
-    (run %{bin:js_of_ocaml}
-         --source-map %{dep:cubes.bc} -o %{targets} --pretty)))
+ (targets cubes.js)
+ (action
+  (run
+   %{bin:js_of_ocaml}
+   --source-map
+   %{dep:cubes.bc}
+   -o
+   %{targets}
+   --pretty)))
 
 (alias
-  (name default)
-  (deps cubes.js index.html))
+ (name default)
+ (deps cubes.js index.html))
