--- a/lib/lwt/dune
+++ b/lib/lwt/dune
@@ -1,5 +1,6 @@
 (library
-  (name js_of_ocaml_lwt)
-  (public_name js_of_ocaml-lwt)
-  (libraries js_of_ocaml lwt)
-  (preprocess (pps js_of_ocaml-ppx)))
+ (name js_of_ocaml_lwt)
+ (public_name js_of_ocaml-lwt)
+ (libraries js_of_ocaml lwt)
+ (preprocess
+  (pps js_of_ocaml-ppx)))
