--- a/lib/tyxml/dune
+++ b/lib/tyxml/dune
@@ -1,6 +1,7 @@
 (library
-  (name js_of_ocaml_tyxml)
-  (public_name js_of_ocaml-tyxml)
-  (synopsis "Tyxml for js_of_ocaml.")
-  (libraries js_of_ocaml tyxml tyxml.functor react reactiveData)
-  (preprocess (pps js_of_ocaml-ppx)))
+ (name js_of_ocaml_tyxml)
+ (public_name js_of_ocaml-tyxml)
+ (synopsis "Tyxml for js_of_ocaml.")
+ (libraries js_of_ocaml tyxml tyxml.functor react reactiveData)
+ (preprocess
+  (pps js_of_ocaml-ppx)))
