--- a/runtime/dune
+++ b/runtime/dune
@@ -1,32 +1,31 @@
 (install
-  (section lib)
-  (package js_of_ocaml-compiler)
-  (files
-    bigarray.js
-    bigstring-base_bigstring.js
-    bigstring-core_kernel.js
-    bigstring-cstruct.js
-    bigstring.js
-    dynlink.js
-    fs.js
-    fs_fake.js
-    fs_node.js
-    gc.js
-    graphics.js
-    ieee_754.js
-    int64.js
-    internalMod.js
-    io.js
-    jslib.js
-    jslib_js_of_ocaml.js
-    lexing.js
-    marshal.js
-    md5.js
-    mlBytes.js
-    nat.js
-    parsing.js
-    stdlib.js
-    toplevel.js
-    unix.js
-    weak.js
-    ))
+ (section lib)
+ (package js_of_ocaml-compiler)
+ (files
+  bigarray.js
+  bigstring-base_bigstring.js
+  bigstring-core_kernel.js
+  bigstring-cstruct.js
+  bigstring.js
+  dynlink.js
+  fs.js
+  fs_fake.js
+  fs_node.js
+  gc.js
+  graphics.js
+  ieee_754.js
+  int64.js
+  internalMod.js
+  io.js
+  jslib.js
+  jslib_js_of_ocaml.js
+  lexing.js
+  marshal.js
+  md5.js
+  mlBytes.js
+  nat.js
+  parsing.js
+  stdlib.js
+  toplevel.js
+  unix.js
+  weak.js))
