--- a/tools/sourcemap/dune
+++ b/tools/sourcemap/dune
@@ -1,7 +1,8 @@
 (executables
-  (names jsoo_sourcemap)
-  (libraries
-    js_of_ocaml-compiler
-    compiler-libs.common
-    js_of_ocaml-compiler.findlib-support)
-  (flags (:standard -safe-string)))
+ (names jsoo_sourcemap)
+ (libraries
+  js_of_ocaml-compiler
+  compiler-libs.common
+  js_of_ocaml-compiler.findlib-support)
+ (flags
+  (:standard -safe-string)))
