--- a/toplevel/lib/dune
+++ b/toplevel/lib/dune
@@ -1,8 +1,12 @@
 (library
-  (name js_of_ocaml_toplevel)
-  (public_name js_of_ocaml-toplevel)
-  (synopsis "Js_of_ocaml toplevel library")
-  (libraries
-    js_of_ocaml-compiler js_of_ocaml bytes
-    compiler-libs.bytecomp compiler-libs.toplevel)
-  (preprocess (pps js_of_ocaml-ppx)))
+ (name js_of_ocaml_toplevel)
+ (public_name js_of_ocaml-toplevel)
+ (synopsis "Js_of_ocaml toplevel library")
+ (libraries
+  js_of_ocaml-compiler
+  js_of_ocaml
+  bytes
+  compiler-libs.bytecomp
+  compiler-libs.toplevel)
+ (preprocess
+  (pps js_of_ocaml-ppx)))
