--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,22 +23,17 @@ jobs:
           - 4.09.x
           - 4.10.x
           - 4.11.x
+          - 4.12.x
         skip-test:
           - true
         include:
           - os: ubuntu-latest
-            ocaml-compiler: 4.12.x
-            skip-test: false
-          - os: macos-latest
-            ocaml-compiler: 4.12.x
-            skip-test: false
-          - os: windows-latest
-            ocaml-compiler: 4.12.x
-            skip-test: false
-          - os: ubuntu-latest
             ocaml-compiler: 4.13.x
             skip-test: false
           - os: macos-latest
+            ocaml-compiler: 4.13.x
+            skip-test: false
+          - os: windows-latest
             ocaml-compiler: 4.13.x
             skip-test: false
 
@@ -79,7 +74,7 @@ jobs:
         if: ${{ !matrix.skip-test }}
 
       - run: opam exec -- git diff --exit-code
-        if: ${{ matrix.ocaml-compiler == '4.13.x' }}
+        if: ${{ !matrix.skip-test }}
 
   lint-fmt:
     strategy:
