--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,12 @@ jobs:
           - 4.09.x
           - 4.10.x
           - 4.11.x
-          - 4.12.x
+          - 4.12.0
         include:
           - os: macos-latest
-            ocaml-compiler: 4.12.x
+            ocaml-compiler: 4.12.0
           - os: windows-latest
-            ocaml-compiler: 4.12.x
+            ocaml-compiler: 4.12.0
 
     runs-on: ${{ matrix.os }}
 
@@ -51,29 +51,29 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           dune-cache: true
-          opam-depext: ${{ matrix.ocaml-compiler == '4.12.x' }}
+          opam-depext: ${{ matrix.ocaml-compiler == '4.12.0' }}
           opam-depext-flags: --with-test
 
       - run: opam install . --best-effort
-        if: ${{ matrix.ocaml-compiler != '4.12.x' }}
+        if: ${{ matrix.ocaml-compiler != '4.12.0' }}
 
       - run: opam install . --with-test
-        if: ${{ matrix.ocaml-compiler == '4.12.x' }}
+        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
 
       - run: opam exec -- make all
-        if: ${{ matrix.ocaml-compiler == '4.12.x' }}
+        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
 
       - run: opam exec -- make tests
-        if: ${{ matrix.ocaml-compiler == '4.12.x' }}
+        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
  
       - run: opam exec -- git diff --exit-code
-        if: ${{ matrix.ocaml-compiler == '4.12.x' }}
+        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
 
   lint-fmt:
     strategy:
       matrix:
         ocaml-compiler:
-          - 4.12.x
+          - 4.12.0
 
     runs-on: ubuntu-latest
 
