--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,19 @@ jobs:
           - 4.09.x
           - 4.10.x
           - 4.11.x
-          - 4.12.0
+          - 4.12.x
+        skip-test:
+          - true
         include:
+          - os: ubuntu-latest
+            ocaml-compiler: 4.13.x
+            skip-test: false
           - os: macos-latest
-            ocaml-compiler: 4.12.0
+            ocaml-compiler: 4.13.x
+            skip-test: false
           - os: windows-latest
-            ocaml-compiler: 4.12.0
+            ocaml-compiler: 4.13.x
+            skip-test: false
 
     runs-on: ${{ matrix.os }}
 
@@ -51,29 +58,29 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           dune-cache: true
-          opam-depext: ${{ matrix.ocaml-compiler == '4.12.0' }}
+          opam-depext: ${{ !matrix.skip-test }}
           opam-depext-flags: --with-test
 
       - run: opam install . --best-effort
-        if: ${{ matrix.ocaml-compiler != '4.12.0' }}
+        if: ${{ matrix.skip-test }}
 
       - run: opam install . --with-test
-        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
+        if: ${{ !matrix.skip-test }}
 
       - run: opam exec -- make all
-        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
+        if: ${{ !matrix.skip-test }}
 
       - run: opam exec -- make tests
-        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
- 
+        if: ${{ !matrix.skip-test }}
+
       - run: opam exec -- git diff --exit-code
-        if: ${{ matrix.ocaml-compiler == '4.12.0' }}
+        if: ${{ !matrix.skip-test }}
 
   lint-fmt:
     strategy:
       matrix:
         ocaml-compiler:
-          - 4.12.0
+          - 4.13.x
 
     runs-on: ubuntu-latest
 
