Always try to run git log but catch exception

--- a/dune
+++ b/dune
@@ -14,12 +14,10 @@ let split_on_char ~sep s =
   String.sub s ~pos:0 ~len:!j :: !r
 
 let git_version =
-  if not (try Sys.is_directory ".git" with _ -> false)
-  then ""
-  else
-    match run_and_read_lines "git log -n1 --pretty=format:%h" with
-    | version :: _ -> version
-    | [] -> ""
+  match run_and_read_lines "git log -n1 --pretty=format:%h" with
+  | exception _ -> ""
+  | version :: _ -> version
+  | [] -> ""
 
 let version =
   let ic = open_in "VERSION" in
