--- a/dune
+++ b/dune
@@ -1,32 +1,14 @@
-(* -*- tuareg -*- *)
-open StdLabels
-open Jbuild_plugin.V1
-
-let git_version =
-  match run_and_read_lines "git log -n1 --pretty=format:%h" with
-  | exception _ -> ""
-  | version :: _ -> version
-  | [] -> ""
-
-let version =
-  let ic = open_in "VERSION" in
-  let version = input_line ic in
-  close_in ic; version
-
-let () =
-  send
-  @@ Printf.sprintf
-       {|
-
 (env
  (dev
   (flags
    (:standard -w +a-4-40-41-42-44-48-58-66-70))))
 
 (rule
-  (targets version.ml.in)
-  (action (with-stdout-to %%{targets}
-           (echo "let s = \"%s\"\nlet git_version = \"%s\""))))
-|}
-       version
-       git_version
+ (targets version.ml.in)
+ (action
+  (with-stdout-to
+   %{targets}
+   (run
+    %{dep:tools/version/gen/gen.exe}
+    %{dep:VERSION}
+    %{dep:tools/version/GIT-VERSION}))))
