--- a/tools/version/dune
+++ b/tools/version/dune
@@ -13,7 +13,7 @@ let dyn =
     {|
 (rule
   (target GIT-VERSION)
-  (action (with-stdout-to %%{target} (echo %s))))
+  (action (with-stdout-to %%{target} (echo "%s"))))
 |}
     git_version
 
