--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,16 @@ jobs:
           - true
         include:
           - os: ubuntu-latest
+            ocaml-compiler: 4.13.x
+            skip-test: false
+          - os: ubuntu-latest
             ocaml-compiler: ocaml-variants.4.12.0+domains
             skip-test: false
           - os: macos-latest
-            ocaml-compiler: ocaml-variants.4.12.0+domains
+            ocaml-compiler: 4.13.x
             skip-test: false
           - os: windows-latest
-            ocaml-compiler: ocaml-variants.4.12.0+domains
+            ocaml-compiler: 4.13.x
             skip-test: false
 
     runs-on: ${{ matrix.os }}
@@ -80,7 +83,7 @@ jobs:
     strategy:
       matrix:
         ocaml-compiler:
-          - ocaml-variants.4.12.0+domains
+          - 4.13.x
 
     runs-on: ubuntu-latest
 
