CI: remove vendored lib, pin ppx_expect instead (#1158)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,8 @@ jobs:
           opam-depext: ${{ !matrix.skip-test }}
           opam-depext-flags: --with-test
 
+      - run: opam pin add ppx_expect https://github.com/hhugo/ppx_expect.git#v0.14.1+winfix --no-action
+
       - run: opam install . --best-effort
         if: ${{ matrix.skip-test }}
 
