--- a/toplevel/lib/dune
+++ b/toplevel/lib/dune
@@ -9,4 +9,4 @@
   compiler-libs.bytecomp
   compiler-libs.toplevel)
  (preprocess
-  (pps js_of_ocaml-ppx)))
+  (pps ppx_optcomp_light js_of_ocaml-ppx)))
