--- a/tools/toplevel_expect/dune
+++ b/tools/toplevel_expect/dune
@@ -14,6 +14,7 @@
   toplevel_expect_test.ml-4.11
   toplevel_expect_test.ml-4.12
   toplevel_expect_test.ml-4.13
+  toplevel_expect_test.ml-4.14
   toplevel_expect_test.ml-default)
  (action
   (with-stdout-to
