--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,20 +1,20 @@
-name: Changelog check
+name: Check changelog
 
 on:
   pull_request:
-    branches: [ master ]
-    types: [ opened, synchronize, reopened, labeled, unlabeled ]
+    branches:
+      - master
+    types:
+      - labeled
+      - opened
+      - reopened
+      - synchronize
+      - unlabeled
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-
+  check-changelog:
+    name: Check changelog
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-
-    - name: git diff
-      if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-changelog-needed') }}
-      env:
-        BASE_REF: ${{ github.event.pull_request.base.ref }}
-      run: |
-        ! git diff --exit-code origin/$BASE_REF -- CHANGES.md
+      - name: Check changelog
+        uses: tarides/changelog-check-action@v1
