--- a/js_of_ocaml-ppx_deriving_json.opam.template
+++ b/js_of_ocaml-ppx_deriving_json.opam.template
@@ -7,7 +7,9 @@ build: [
     name
     "-j"
     jobs
+    "--promote-install-files=false"
     "@install"
     "@doc" {with-doc}
   ]
+  ["dune" "install" "-p" name "--create-install-files" name]
 ]
