--- a/js_of_ocaml-lwt.opam
+++ b/js_of_ocaml-lwt.opam
@@ -17,7 +17,7 @@ depends: [
   "js_of_ocaml-ppx" {= version}
   "lwt" {>= "2.4.4"}
   "num" {with-test}
-  "ppx_expect" {with-test}
+  "ppx_expect" {>= "v0.14.2" & with-test}
   "ppxlib" {>= "0.22.0" & with-test}
   "re" {>= "1.9.0" & with-test}
   "odoc" {with-doc}
