--- a/js_of_ocaml-ocamlbuild.opam
+++ b/js_of_ocaml-ocamlbuild.opam
@@ -15,7 +15,7 @@ depends: [
   "ocaml" {>= "4.04"}
   "ocamlbuild"
   "num" {with-test}
-  "ppx_expect" {with-test}
+  "ppx_expect" {>= "v0.14.2" & with-test}
   "ppxlib" {>= "0.22.0" & with-test}
   "re" {>= "1.9.0" & with-test}
   "odoc" {with-doc}
