--- a/js_of_ocaml-ppx.opam
+++ b/js_of_ocaml-ppx.opam
@@ -16,7 +16,7 @@ depends: [
   "js_of_ocaml" {= version}
   "ppxlib" {>= "0.15.0"}
   "num" {with-test}
-  "ppx_expect" {with-test}
+  "ppx_expect" {>= "v0.14.2" & with-test}
   "re" {>= "1.9.0" & with-test}
   "odoc" {with-doc}
 ]
