--- a/js_of_ocaml-toplevel.opam
+++ b/js_of_ocaml-toplevel.opam
@@ -20,7 +20,7 @@ depends: [
   "cohttp-lwt-unix" {with-test}
   "graphics" {with-test}
   "num" {with-test}
-  "ppx_expect" {with-test}
+  "ppx_expect" {>= "v0.14.2" & with-test}
   "ppxlib" {>= "0.15" & with-test}
   "re" {>= "1.9.0" & with-test}
   "odoc" {with-doc}
