--- a/js_of_ocaml.opam
+++ b/js_of_ocaml.opam
@@ -17,7 +17,7 @@ depends: [
   "ppxlib" {>= "0.15"}
   "uchar"
   "num" {with-test}
-  "ppx_expect" {with-test}
+  "ppx_expect" {>= "v0.14.2" & with-test}
   "re" {>= "1.9.0" & with-test}
   "odoc" {with-doc}
 ]
