Build annot_parser using a (menhir) stanza.
This implicitly activates --infer and works around a bug of
the type-checker in OCaml 4.07-4.10.

--- a/compiler/lib/dune
+++ b/compiler/lib/dune
@@ -51,11 +51,10 @@
  (action
   (diff js_parser.conflicts.reference js_parser.conflicts)))
 
-(rule
- (targets annot_parser.mli annot_parser.ml)
- (deps standard.mly)
- (action
-  (run menhir --stdlib . --explain %{dep:annot_parser.mly})))
+(menhir
+  (modules annot_parser)
+  (flags --explain)
+)
 
 (rule
  (targets compiler_version.ml)
