--- a/compiler/lib/dune
+++ b/compiler/lib/dune
@@ -19,43 +19,23 @@
 
 (ocamllex js_lexer annot_lexer)
 
-;; cp $(ocamlfind printconf path)/menhir/standard.mly standard.mly
+(menhir
+ (modules js_parser)
+ (flags
+  --table
+  --external-tokens
+  Js_token
+  --explain
+  --unused-token
+  TComment
+  --unused-token
+  TCommentLineDirective
+  --unused-token
+  TUnknown))
 
-;; menhir is just noisy, both because this parser has conflicts, or
-;; because we don't use --infer (to avoid having to write  manually and
-;; badly specified dependencieds), so we just discard stderr.
-
-(rule
- (targets js_parser.mli js_parser.ml js_parser.conflicts)
- (deps standard.mly)
- (action
-  (run
-   menhir
-   --stdlib
-   .
-   --table
-   --external-tokens
-   Js_token
-   --explain
-   %{dep:js_parser.mly}
-   --unused-token
-   TComment
-   --unused-token
-   TCommentLineDirective
-   --unused-token
-   TUnknown)))
-
-(rule
- (alias runtest)
- (deps js_parser.conflicts.reference js_parser.conflicts)
- (action
-  (diff js_parser.conflicts.reference js_parser.conflicts)))
-
-(rule
- (targets annot_parser.mli annot_parser.ml)
- (deps standard.mly)
- (action
-  (run menhir --stdlib . --explain %{dep:annot_parser.mly})))
+(menhir
+ (modules annot_parser)
+ (flags --explain))
 
 (rule
  (targets compiler_version.ml)
