--- a/compiler/tests-compiler/dune
+++ b/compiler/tests-compiler/dune
@@ -1,9 +1,8 @@
 (include dune.inc)
 
 (rule
- (with-stdout-to
-  dune.inc.gen
-  (run gen-rules/gen.exe)))
+ (deps (glob_files *.ml))
+ (action (with-stdout-to dune.inc.gen (run gen-rules/gen.exe))))
 
 (rule
  (alias runtest)
